objects/SVMXC__Zone_Pricing__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Zone Pricing for travel on work order pricing</description>
    <fields>
        <fullName>SVMXC__Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipName>Zone_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Plan</label>
        <referenceTo>SVMXC__Service_Plan__c</referenceTo>
        <relationshipLabel>Zone Pricing</relationshipLabel>
        <relationshipName>Zone_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Zone Pricing</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zone Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SVMXC__SVMX_ServicePlan_Or_Contract</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEN(SVMXC__Service_Contract__r.Id) &gt; 0, IF(LEN( SVMXC__Service_Plan__r.Id ) &gt; 0, TRUE, FALSE), IF(LEN(SVMXC__Service_Plan__r.Id) &gt; 0, FALSE, TRUE))</errorConditionFormula>
        <errorMessage>Zone Pricing must be associated with either Service Plan or Service Contract, but not both.</errorMessage>
    </validationRules>
</CustomObject>